Fix: images too wide on mobile devices

--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -176,7 +176,7 @@ article .content button {
 
 @media (@small) {
   .illustration {
-    width: 100%;
+    width: 60%;
     display: block;
     margin: 0 auto;
   }
